# swamp

./: .env.dist  .gitignore  CLAUDE.md  README.md
backend/: Cargo.toml
backend/src/: addresses.rs  filter_analysis.rs  ledger_db.rs  local_ledger.rs  main.rs  network_tracer.rs  pattern_addresses.rs  pattern_detector.rs  transactions.rs
graph/: .gitignore  README.md  package-lock.json  package.json
graph/public/: account_transactions_defi.json  account_transactions_foundation.json  account_transactions_identified.json  account_transactions_nodeprovider.json  account_transactions_snsparticipant.json  daily_balances_sample.json  index.html  seed_analysis.json  test_foundation.json  test_np.json
graph/src/: App.css  App.tsx  DailyBalances.tsx  Graph.tsx  GraphContainer.tsx  Home.tsx  Layout.tsx  Ledger.tsx  graphData.ts  types.ts
graph/src/utils/: Toast.tsx
