[package]
name = "graph_data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["std"] }
candid = "0.10.13"
chrono = "0.4.31"
hex = "0.4.3"
ic-agent = "0.40.0"
ring = "0.17.14"
ic-cdk = "0.17.1"
derive_more = { version = "2.0", features = ["full"] }
sha2 = "0.10.8"
serde_bytes = "0.11"
crc32fast = "1.4.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.7.6"
icp-ledger = { git = "https://github.com/dfinity/ic/", rev = "9d4e0c4c9b2eda91e93bbbc010a8bfd6071a252f" }
reqwest = { version = "0.12.14", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
